--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>RailsMessage</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= content_for?(:title) ? yield(:title) : "RailsMessage" %></title>
+    <%= csrf_meta_tags %>
 
-<%= yield %>
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
+    <![endif]-->
 
-</body>
+    <%= stylesheet_link_tag "application", :media => "all" %>
+
+    <!-- For all other devices -->
+    <!-- Size should be 32 x 32 pixels -->
+    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
+
+    <%= javascript_include_tag "application" %>
+  </head>
+  <body>
+    <%= nav_bar :static => :top, :brand => "Rails Message", :responsive => true do %>
+      <%= menu_group do %>
+          <%= menu_item "Home", root_path %>
+          <%= menu_divider %>
+          <%= menu_item "About Us", "javascript:void(0)" %>
+          <%= menu_item "Contact", "javascript:void(0)" %>
+      <% end %>
+      <%= menu_group :pull => :right do %>
+        <%= menu_item "Log in as Admin" %>
+      <% end %>
+    <% end %>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="well sidebar-nav">
+            <%= yield %>
+          </div><!--/.well -->
+        </div><!--/span-->
+      </div><!--/row-->
+    </div> <!-- /container -->
+
+    <footer>
+      <%= nav_bar :static => :bottom do %>
+        <p>&copy; Company 2014</p>
+      <% end %>
+    </footer>
+  </body>
 </html>
