--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,8 @@
       <% end %>
     <% end %>
 
+    <%= gflash %>
+
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
